# mcc

./: .gitattributes  .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  build.rs
.cargo/: config.toml
.claude/skills/: mcc.md
doc/: NAMING.md
scripts/: bump-version.sh  regress.sh
src/: debug_log.rs  export_api.rs  lib.rs  logging.rs  main.rs  query_api.rs  search_api.rs
src/ast/: ast_node.rs  ast_semantic.rs  ast_token.rs  c_bindings.rs  c_macros.rs  error.rs  mod.rs
src/builder/: current_uri.rs  diagnostic.rs  global.rs  inst_ref_validator.rs  lib_mgr.rs  main.rs  mc_code.rs  mc_use.rs  mod.rs  util.rs  workspace.rs
src/cli/: config.rs  data_dir.rs  mod.rs  rpc_client.rs  rpcclient.rs  server_config.rs  servercfg.rs
src/cmds/: build.rs  check.rs  config.rs  convert.rs  def.rs  erc.rs  explain.rs  export.rs  extract.rs  filter.rs  lib.rs  manifest.rs  mod.rs  parse.rs  print.rs  proj.rs  query.rs  refs.rs  report.rs  search.rs  server.rs  show.rs
src/core/: common.rs  mc_define.rs  mc_enum.rs  mc_func.rs  mc_ifs.rs  mc_inst.rs  mod.rs
src/db/: context.rs  mod.rs
src/export/: kicad.rs  mod.rs  spice.rs
src/export_api/: bom.rs  kicad.rs  mod.rs  netlist.rs  spice.rs
src/instant/: inst_table.rs  insttab.rs  mc_bus.rs  mc_comp.rs  mc_net.rs  mod.rs
src/lsp/: completion.rs  diagnostics.rs  goto_def.rs  gotodef.rs  hover.rs  mod.rs  references.rs  sem.rs  symbols.rs
src/output/: builder.rs  compact.rs  envelope.rs  (+3 more)
tests/: determinism_hbl1.rs  diagnostic_regressions.rs  dynamic_pin_access.rs  net_report_consistency.rs
(+302 files in other folders)
