# Copyright (c) 2026 MCode
#
# Licensed under either of Apache License, Version 2.0 or MIT License at your option.

[package]
name = "mcc"
version = "0.7.11"
edition = "2021"
default-run = "mcc"

[lib]
name = "mcc" 
path = "src/lib.rs"

[[bin]]
name = "mcc"
path = "src/main.rs"

[[bin]]
name = "mcviz"
path = "src/bin/mcviz.rs"

[dependencies]
libc = "0.2"
dashmap = "6.1.0"
once_cell = "1.19"
rust-lapper = "1.1.0"
oxc_index = "0.36.0"
regex = "1.10"
dirs = "5.0"
line-index = "0.1.2"
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"
anyhow = "1.0"
axum = "0.7"
hyper = "1.1"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "fmt", "ansi"] }
tar = "0.4"
flate2 = "1.0"
base64 = "0.22"
sysinfo = "0.32"
reqwest = { version = "0.12", features = ["json", "blocking"] }
bytes = "1.0"

[dev-dependencies]
criterion = "0.5"

[build-dependencies]
cc = "1.0"
